# wcdl

./: README.md  data.db  pyproject.toml
wcdl/: __init__.py  database.py  downloader.py  fetch.py  tools.py  wcdl  wcdl.py
wcdl/src/: __init__.py  database.py  downloader.py  fetch.py
