[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wcdl"
version = "1.0.1"
description = "cli manga downloader"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0"

authors = [
    {name = "Rebin Mahmoudi", email = "rebinmahmoudi14@gmail.com"},
]

keywords = ["cli", "manga", "download", "weebcentral"]

classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests", 
    "rich", 
    "BeautifulSoup4", 
    "pyfzf",
    'importlib-metadata; python_version<"3.10"'
]


[project.scripts]
wcdl = "wcdl.wcdl:main"
